feat: 完成excel 数据过滤, 然而没有很好的可以生成有下拉选项的excel文件的js库,淦

--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
   "scripts": {
     "test": "lerna run test"
   },
-  "workspaces": ["packages/*"]
+  "workspaces": [
+    "packages/*"
+  ],
+  "dependencies": {
+    "xlsx": "^0.15.1"
+  }
 }
