--- a/packages/jsonp/tsconfig.json
+++ b/packages/jsonp/tsconfig.json
@@ -1,12 +1,13 @@
 {
     "compilerOptions": {
-        "target": "es2017",
+        "target": "es2015",
         "module": "commonjs",
         "noImplicitAny": true,
         "outDir": "dist",
+        "declaration": true,
         "sourceMap": true
     },
     "include": [
-        "src/**/*"
+        "src/jsonp.ts"
     ]
 }
