--- a/packages/event-emitter/package.json
+++ b/packages/event-emitter/package.json
@@ -4,7 +4,7 @@
   "description": "easy event-emitter",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ts-node test.ts"
   },
   "keywords": [
     "event-emitter"
