--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/jest": "^24.0.19",
     "jest": "^24.9.0",
+    "preact": "^10.0.2",
     "ts-jest": "^24.1.0"
   }
 }
