--- a/packages/jsx/package.json
+++ b/packages/jsx/package.json
@@ -8,10 +8,8 @@
   },
   "author": "lokialone",
   "license": "ISC",
-  "dependencies": {
-    "jest": "^24.9.0"
-  },
   "devDependencies": {
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "ts-jest": "^24.1.0"
   }
 }
