--- a/packages/debugger-tool/package.json
+++ b/packages/debugger-tool/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "proxy",
+  "name": "debugger-tool",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "parcel index.html"
   },
   "author": "lokialone",
   "license": "ISC"
