--- a/packages/event-emitter/package.json
+++ b/packages/event-emitter/package.json
@@ -4,7 +4,8 @@
   "description": "easy event-emitter",
   "main": "index.js",
   "scripts": {
-    "test": "ts-node test.ts"
+    "test": "ts-node test.ts",
+    "build": "tsc src/index.ts "
   },
   "keywords": [
     "event-emitter"
