--- a/packages/support/package.json
+++ b/packages/support/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "parcel example/index.html"
+    "dev": "parcel example/index.html"
   },
   "author": "lokialone",
   "license": "ISC"
