--- a/packages/debugger-tool/package.json
+++ b/packages/debugger-tool/package.json
@@ -8,5 +8,8 @@
     "dev": "parcel index.html"
   },
   "author": "lokialone",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "cross-env": "^7.0.2"
+  }
 }
