--- a/packages/jsx/package.json
+++ b/packages/jsx/package.json
@@ -9,6 +9,7 @@
   "author": "lokialone",
   "license": "ISC",
   "devDependencies": {
+    "cross-env": "^7.0.2",
     "jest": "^24.9.0",
     "ts-jest": "^24.1.0"
   }
