--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -13,5 +13,8 @@
     "jest": "^24.9.0",
     "preact": "^10.0.2",
     "ts-jest": "^24.1.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.2"
   }
 }
