--- a/packages/mock-server/package.json
+++ b/packages/mock-server/package.json
@@ -8,5 +8,8 @@
     "build": "rm -rf dist/ && tsc --build tsconfig.json"
   },
   "author": "lokialone",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "cross-env": "^7.0.2"
+  }
 }
