--- a/packages/roco-react/package.json
+++ b/packages/roco-react/package.json
@@ -32,6 +32,7 @@
     "@babel/core": "^7.9.0",
     "@babel/plugin-transform-react-jsx": "^7.9.4",
     "babel-loader": "^8.1.0",
+    "cross-env": "^7.0.2",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.2.0",
     "webpack": "^4.43.0",
