--- a/packages/style/package.json
+++ b/packages/style/package.json
@@ -13,5 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "react": "^16.11.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.2"
   }
 }
