--- a/packages/support/package.json
+++ b/packages/support/package.json
@@ -7,5 +7,8 @@
     "dev": "parcel example/index.html"
   },
   "author": "lokialone",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "cross-env": "^7.0.2"
+  }
 }
