--- a/packages/ro-webpack/package.json
+++ b/packages/ro-webpack/package.json
@@ -32,5 +32,9 @@
     "jszip": "^3.5.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4"
   }
 }
