--- a/packages/ro-webpack/package.json
+++ b/packages/ro-webpack/package.json
@@ -35,6 +35,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
-    "@babel/preset-env": "^7.10.4"
+    "@babel/preset-env": "^7.10.4",
+    "css-selector-tokenizer": "^0.7.3",
+    "file-loader": "^6.0.0",
+    "less": "^3.12.2",
+    "mime": "^2.4.6",
+    "postcss": "^7.0.32"
   }
 }
